deployment/articles.yaml
kind: Service
apiVersion: v1
metadata:
  name: articles
  labels:
    app: articles
spec:
  selector:
    app: articles
  ports:
    - port: 8080
      name: http
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: articles
  labels:
    app: articles
spec:
  selector:
    matchLabels:
      app: articles
  replicas: 1
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true"    
      labels:
        app: articles
        version: v1
    spec:
      containers:
      - name: articles
        image: haraldu/articles:1
        ports:
        - containerPort: 8080
        livenessProbe:
          exec:
            command: ["sh", "-c", "curl -s http://localhost:8080/"]
          initialDelaySeconds: 20
        readinessProbe:
          exec:
            command: ["sh", "-c", "curl -s http://localhost:8080/health | grep -q articles"]
          initialDelaySeconds: 40
      restartPolicy: Always
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: articles
spec:
  hosts:
  - articles
  http:
  - route:
    - destination:
        host: articles
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: articles
spec:
  host: articles
  subsets:
  - name: v1
    labels:
      version: v1
---
