deployment/authors.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: authors
  labels:
    app: authors
    version: v1
spec:
  selector:
    matchLabels:
      app: authors
      version: v1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true"
      labels:
        app: authors
        version: v1
    spec:
      containers:
      - image: haraldu/authors:1
        name: authors
        ports:
        - containerPort: 3000
          name: authors
      restartPolicy: Always    
---
apiVersion: v1
kind: Service
metadata:
  name: authors
  labels:
    app: authors
spec:
  type: NodePort
  ports:
    - port: 3000  
      protocol: TCP
      name: http
  selector:
    app: authors
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors
spec:
  hosts:
  - authors
  http:
  - route:
    - destination:
        host: authors
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authors
spec:
  host: authors
  subsets:
  - name: v1
    labels:
      version: v1
---
